--- a/index.html
+++ b/index.html
@@ -1,16 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://fonts.googleapis.com/css?family=Nanum+Myeongjo" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>Document</title>
+    <title>Knockout Fitness</title>
 </head>
+
 <body>
-    
+
+    <div class="container-fluid">
+
+        <header class="row">
+            <div class="col-md-3" id="logo-wrapper">
+                <img src="./assets/images/logo.png" alt="" class="src">
+            </div>
+            <div class="offset-md-2 col-md-6">
+                <ul>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Schedule</a></li>
+                    <li><a href="#">Photo Gallery</a></li>
+                </ul>
+            </div>
+        </header>
+
+        <main class="row">
+            <div class="col-md-12" id="hero-wrapper">
+                <div class="bg-danger" id="silouette">
+                    <img src="./assets/images/silouette.png" alt="" class="src">
+                </div>
+                <div id="quote">
+                    <h1>Rise above your past to begin your future.</h1>
+                </div>
+            </div>
+        </main>
+
+        <div class="row" id="content-wrapper">
+            <div class="col-md-12" id="content"></div>
+        </div>
+    </div>
+
 </body>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script type="text/javascript" src="./assets/js/kf.js"></script>
+
 </html>
