--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
         <header class="row">
             <div class="col-md-3" id="logo-wrapper">
-                <img src="./assets/images/logo.png" alt="" class="src">
+                <img src="./assets/images/logo-yellow-bg.png" alt="" class="src">
             </div>
             <div class="offset-md-2 col-md-6">
                 <ul>
@@ -31,7 +31,7 @@
         <main class="row">
             <div class="col-md-12" id="hero-wrapper">
                 <div class="bg-danger" id="silouette">
-                    <img src="./assets/images/silouette.png" alt="" class="src">
+                    <img src="./assets/images/silouette.png" alt="" class="src" height="400px">
                 </div>
                 <div id="quote">
                     <h1>Rise above your past to begin your future.</h1>
