made a few layouts

--- a/index2.html
+++ b/index2.html
@@ -12,8 +12,23 @@
 </head>
 
 <body>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, natus earum mollitia provident quaerat rem nostrum
+        eveniet recusandae sed quas quae maiores consequuntur. Quibusdam impedit maxime officiis illo molestiae vel.</p>
+
+    <div class="parallax-container"></div>
+
+    <div class="some-content">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Assumenda dignissimos dolorum nisi! Ex corrupti sint corporis
+        necessitatibus, ad numquam quaerat culpa nam, minus, distinctio soluta recusandae nulla nemo? Facere, corrupti?</div>
+
+    <div class="another-parallax"></div>
+
+    <div class="more-content">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vero velit praesentium quo. Excepturi quas blanditiis voluptates
+        ex ipsa consequuntur incidunt. Incidunt assumenda et nobis tempore rerum officiis dolorum necessitatibus amet!</div>
+
+
 
 </body>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script type="text/javascript" src="./assets/js/kf.js"></script>
+
 </html>
