--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="https://fonts.googleapis.com/css?family=Nanum+Myeongjo" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Black+Ops+One" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>Knockout Fitness</title>
@@ -19,13 +19,7 @@
             <div class="col-md-3" id="logo-wrapper">
                 <img src="./assets/images/logo-yellow-bg.png" alt="" class="src">
             </div>
-            <div class="offset-md-2 col-md-6">
-                <ul>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Schedule</a></li>
-                    <li><a href="#">Photo Gallery</a></li>
-                </ul>
-            </div>
+
         </header>
 
         <main class="row">
@@ -34,13 +28,16 @@
                     <img src="./assets/images/silouette.png" alt="" class="src" height="400px">
                 </div>
                 <div id="quote">
-                    <h1>Rise above your past to begin your future.</h1>
+                    <h2>Rise above your past to begin your future.</h2>
                 </div>
             </div>
         </main>
 
         <div class="row" id="content-wrapper">
-            <div class="col-md-12" id="content"></div>
+            <div class="col-md-12" id="content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero architecto saepe veniam ex. Praesentium nemo
+                non totam consequuntur molestias nesciunt. Ea delectus nam, in natus perspiciatis quis ducimus praesentium
+                similique?</div>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reprehenderit et voluptate quasi voluptas dignissimos quibusdam quis, tenetur dicta soluta aut asperiores quam corrupti qui! Impedit beatae ipsa itaque porro iusto?</p>
         </div>
     </div>
 
