--- a/index.html
+++ b/index.html
@@ -15,34 +15,87 @@
 
     <div class="container-fluid">
 
-        <header class="row">
-            <div class="col-md-3" id="logo-wrapper">
-                <img src="./assets/images/logo-yellow-bg.png" alt="" class="src">
+        <div class="row">
+            <header class="col-lg-12">
+                <img src="./assets/images/9596014.png" alt="" class="src">
+            </header>
+        </div>
+
+        <div class="row">
+            <div class="col-lg-12" id="nav-area">
+                <ul>
+                    <li>
+                        <a href="#">button</a>
+                    </li>
+                    <li>
+                        <a href="#">button</a>
+                    </li>
+                    <li>
+                        <a href="#">button</a>
+                    </li>
+                    <li>
+                        <a href="#">button</a>
+                    </li>
+                    <li>
+                        <a href="#">button</a>
+                    </li>
+
+                </ul>
+
             </div>
+        </div>
 
-        </header>
-
-        <main class="row">
-            <div class="col-md-12" id="hero-wrapper">
-                <div class="bg-danger" id="silouette">
-                    <img src="./assets/images/silouette.png" alt="" class="src" height="400px">
-                </div>
+        <div class="row" id="hero-wrapper">
+            <div class="offset-lg-1 col-lg-10" id="hero-banner">
                 <div id="quote">
                     <h2>Rise above your past to begin your future.</h2>
                 </div>
             </div>
-        </main>
 
-        <div class="row" id="content-wrapper">
-            <div class="col-md-12" id="content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero architecto saepe veniam ex. Praesentium nemo
-                non totam consequuntur molestias nesciunt. Ea delectus nam, in natus perspiciatis quis ducimus praesentium
-                similique?</div>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reprehenderit et voluptate quasi voluptas dignissimos quibusdam quis, tenetur dicta soluta aut asperiores quam corrupti qui! Impedit beatae ipsa itaque porro iusto?</p>
         </div>
+
+        <div class="row" id="section-1-wrapper">
+            <div class="offset-lg-1 col-lg-10" id="section-1">
+                <p>
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Possimus accusantium provident odio consequuntur, placeat unde neque. Ipsum expedita nulla dolore animi eius commodi repudiandae fugiat molestias, molestiae delectus corporis vero.
+                </p>
+            </div>
+        </div>
+
+        <div class="row" id="section-2-wrapper">
+                <div class="offset-lg-1 col-lg-10" id="section-2">
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Beatae totam voluptatum voluptatibus cupiditate nemo dolorum nobis ex ipsa recusandae tempora magni, perspiciatis velit accusamus eius aut alias, impedit laudantium rem?
+                    </p>
+                </div>
+        </div>
+
+        <div class="row" id="section-3-wrapper">
+            <div class="offset-lg-1 col-lg-10" id="section-3">
+                <p>
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Beatae totam voluptatum voluptatibus cupiditate nemo dolorum nobis ex ipsa recusandae tempora magni, perspiciatis velit accusamus eius aut alias, impedit laudantium rem?
+                </p>
+            </div>
+    </div>
+
+    <div class="row" id="section-4-wrapper">
+        <div class="offset-lg-1 col-lg-10" id="section-4">
+            <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Beatae totam voluptatum voluptatibus cupiditate nemo dolorum nobis ex ipsa recusandae tempora magni, perspiciatis velit accusamus eius aut alias, impedit laudantium rem?
+            </p>
+        </div>
+</div>
+
+<div class="row" id="footer-wrapper">
+    <div class="offset-lg-1 col-lg-10" id="footer">
+        <h5>&copy; 2018 Knockout Fitness</h5>
+    </div>
+</div>
+
+
+        
     </div>
 
 </body>
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script type="text/javascript" src="./assets/js/kf.js"></script>
 
 </html>
