--- a/index2.html
+++ b/index2.html
@@ -5,27 +5,41 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="https://fonts.googleapis.com/css?family=Nanum+Myeongjo" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Black+Ops+One" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-    <link rel="stylesheet" href="./assets/css/style2.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
     <title>Knockout Fitness</title>
 </head>
 
 <body>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, natus earum mollitia provident quaerat rem nostrum
-        eveniet recusandae sed quas quae maiores consequuntur. Quibusdam impedit maxime officiis illo molestiae vel.</p>
 
-    <div class="parallax-container"></div>
+    <div class="container-fluid">
 
-    <div class="some-content">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Assumenda dignissimos dolorum nisi! Ex corrupti sint corporis
-        necessitatibus, ad numquam quaerat culpa nam, minus, distinctio soluta recusandae nulla nemo? Facere, corrupti?</div>
+        <header class="row">
+            <div class="col-md-3" id="logo-wrapper">
+                <img src="./assets/images/logo-yellow-bg.png" alt="" class="src">
+            </div>
 
-    <div class="another-parallax"></div>
+        </header>
 
-    <div class="more-content">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vero velit praesentium quo. Excepturi quas blanditiis voluptates
-        ex ipsa consequuntur incidunt. Incidunt assumenda et nobis tempore rerum officiis dolorum necessitatibus amet!</div>
+        <main class="row">
+            <div class="col-md-12" id="hero-wrapper">
+                <div class="bg-danger" id="silouette">
+                    <img src="./assets/images/silouette.png" alt="" class="src" height="400px">
+                </div>
+                <div id="quote">
+                    <h2>Rise above your past to begin your future.</h2>
+                </div>
+            </div>
+        </main>
 
-
+        <div class="row" id="content-wrapper">
+            <div class="col-md-12" id="content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero architecto saepe veniam ex. Praesentium nemo
+                non totam consequuntur molestias nesciunt. Ea delectus nam, in natus perspiciatis quis ducimus praesentium
+                similique?</div>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reprehenderit et voluptate quasi voluptas dignissimos quibusdam quis, tenetur dicta soluta aut asperiores quam corrupti qui! Impedit beatae ipsa itaque porro iusto?</p>
+        </div>
+    </div>
 
 </body>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
