--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link href="https://fonts.googleapis.com/css?family=Black+Ops+One" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Black+Ops+One|Nanum+Gothic" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <link href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" rel="stylesheet">
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>Knockout Fitness</title>
 </head>
@@ -17,7 +18,11 @@
 
         <div class="row">
             <header class="col-lg-12">
+                <i class="fas fa-envelope fa-2x"></i>
+                <i class="fab fa-facebook-square fa-2x"></i>
                 <img src="./assets/images/9596014.png" alt="" class="src">
+                <i class="fab fa-twitter-square fa-2x"></i>
+                <i class="fab fa-instagram fa-2x"></i>
             </header>
         </div>
 
@@ -25,19 +30,19 @@
             <div class="col-lg-12" id="nav-area">
                 <ul>
                     <li>
-                        <a href="#">button</a>
+                        <a href="#">About</a>
                     </li>
                     <li>
-                        <a href="#">button</a>
+                        <a href="#">Coaches</a>
                     </li>
                     <li>
-                        <a href="#">button</a>
+                        <a href="#">Schedule</a>
                     </li>
                     <li>
-                        <a href="#">button</a>
+                        <a href="#">Location</a>
                     </li>
                     <li>
-                        <a href="#">button</a>
+                        <a href="#">Photo Gallery</a>
                     </li>
 
                 </ul>
@@ -56,46 +61,64 @@
 
         <div class="row" id="section-1-wrapper">
             <div class="offset-lg-1 col-lg-10" id="section-1">
+                <div id="building-front">
+                    <img src="./assets/images/slideshow/IMG_2269.JPG" alt="" class="src" height=500>
+                </div>
                 <p>
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Possimus accusantium provident odio consequuntur, placeat unde neque. Ipsum expedita nulla dolore animi eius commodi repudiandae fugiat molestias, molestiae delectus corporis vero.
+                    Knockout Fitness provides kickboxing, Muay Thai, MMA and personal training for adults and children, as well as nutritional
+                    counseling and supplements. Students burn calories and get in shape as they sweat through kickboxing
+                    and Muay Thai classes led by experienced instructors.
                 </p>
             </div>
         </div>
 
         <div class="row" id="section-2-wrapper">
-                <div class="offset-lg-1 col-lg-10" id="section-2">
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Beatae totam voluptatum voluptatibus cupiditate nemo dolorum nobis ex ipsa recusandae tempora magni, perspiciatis velit accusamus eius aut alias, impedit laudantium rem?
-                    </p>
+            <div class="offset-lg-1 col-lg-10" id="section-2">
+                <div id="muay-thai">
+                    <img src="./assets/images/slideshow/9165834.png" alt="" class="src" height=300>
                 </div>
+                <h3>Muay Thai</h3>
+                <p>
+                    Fast-Paced And Difficult To Master, Muay Thai Is One Of Thailand's Proudest Traditions. Read On For A Basic Overview Of This
+                    Centuries-Old Martial Art.
+                </p>
+            </div>
         </div>
 
         <div class="row" id="section-3-wrapper">
             <div class="offset-lg-1 col-lg-10" id="section-3">
+                    <div id="knee-2-the-face">
+                            <img src="./assets/images/slideshow/IMG_2525.JPG" alt="" class="src" height=300>
+                            </div>
+                <h3>Grappling</h3>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Beatae totam voluptatum voluptatibus cupiditate nemo dolorum nobis ex ipsa recusandae tempora magni, perspiciatis velit accusamus eius aut alias, impedit laudantium rem?
+                    In hand-to-hand combat, grappling is a close fighting technique used to gain a physical advantage such as improving relative
+                    position, or causing injury to the opponent. Grappling covers techniques used in many disciplines, styles
+                    and martial arts that are practiced both as combat sports and for self-defense.
                 </p>
             </div>
-    </div>
-
-    <div class="row" id="section-4-wrapper">
-        <div class="offset-lg-1 col-lg-10" id="section-4">
-            <p>
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Beatae totam voluptatum voluptatibus cupiditate nemo dolorum nobis ex ipsa recusandae tempora magni, perspiciatis velit accusamus eius aut alias, impedit laudantium rem?
-            </p>
         </div>
-</div>
 
-<div class="row" id="footer-wrapper">
-    <div class="offset-lg-1 col-lg-10" id="footer">
-        <h5>&copy; 2018 Knockout Fitness</h5>
-    </div>
-</div>
+        <div class="row" id="section-4-wrapper">
+            <div class="offset-lg-1 col-lg-10" id="section-4">
+                <p>
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Beatae totam voluptatum voluptatibus cupiditate nemo dolorum nobis
+                    ex ipsa recusandae tempora magni, perspiciatis velit accusamus eius aut alias, impedit laudantium rem?
+                </p>
+            </div>
+        </div>
+
+        <div class="row" id="footer-wrapper">
+            <div class="offset-lg-1 col-lg-10" id="footer">
+                <h5>&copy; 2018 Knockout Fitness</h5>
+            </div>
+        </div>
 
 
-        
+
     </div>
 
 </body>
+<script type="text/javascript" src="./assets/js/kf.js"></script>
 
 </html>
