added location and calendar embeds

--- a/schedule.html
+++ b/schedule.html
@@ -45,7 +45,7 @@
                         <a href="location.html">Location</a>
                     </li>
                     <li>
-                        <a href="#">Photo Gallery</a>
+                        <a href="photos.html">Photo Gallery</a>
                     </li>
 
                 </ul>
@@ -54,59 +54,18 @@
         </div>
 
         <div class="row" id="hero-wrapper">
-            <div class="offset-lg-1 col-lg-10" id="hero-banner">
-                <div id="quote">
-                    <h2>Rise above your past to begin your future.</h2>
-                </div>
+            <div class="offset-lg-1 col-lg-10 iframe-map" id="calendar-embed">
+                <iframe src="https://calendar.google.com/calendar/embed?showTitle=0&amp;showNav=0&amp;showDate=0&amp;showPrint=0&amp;showTabs=0&amp;showCalendars=0&amp;showTz=0&amp;mode=WEEK&amp;height=600&amp;wkst=1&amp;bgcolor=%23000000&amp;src=bagglerock%40gmail.com&amp;color=%231B887A&amp;ctz=America%2FNew_York"
+                    style="border:solid 2px #777" frameborder="0" scrolling="no"></iframe>
             </div>
 
         </div>
 
         <div class="row" id="section-1-wrapper">
             <div class="offset-lg-1 col-lg-10" id="section-1">
-                <div id="building-front">
-                    <img src="./assets/images/slideshow/building_dark.JPG" alt="" class="src" height=500>
-                </div>
                 <p>
-                    Knockout Fitness provides kickboxing, Muay Thai, MMA and personal training for adults and children, as well as nutritional
-                    counseling and supplements. Students burn calories and get in shape as they sweat through kickboxing
-                    and Muay Thai classes led by experienced instructors.
-                </p>
-            </div>
-        </div>
-
-        <div class="row" id="section-2-wrapper">
-            <div class="offset-lg-1 col-lg-10" id="section-2">
-                <div id="muay-thai">
-                    <img src="./assets/images/slideshow/9165834.png" alt="" class="src" height=300>
-                </div>
-                <h3>Muay Thai</h3>
-                <p>
-                    Fast-Paced And Difficult To Master, Muay Thai Is One Of Thailand's Proudest Traditions. Read On For A Basic Overview Of This
-                    Centuries-Old Martial Art.
-                </p>
-            </div>
-        </div>
-
-        <div class="row" id="section-3-wrapper">
-            <div class="offset-lg-1 col-lg-10" id="section-3">
-                <div id="knee-2-the-face">
-                    <img src="./assets/images/slideshow/IMG_2525.JPG" alt="" class="src" height=300>
-                </div>
-                <h3>Grappling</h3>
-                <p>
-                    In hand-to-hand combat, grappling is a close fighting technique used to gain a physical advantage such as improving relative
-                    position, or causing injury to the opponent. Grappling covers techniques used in many disciplines, styles
-                    and martial arts that are practiced both as combat sports and for self-defense.
-                </p>
-            </div>
-        </div>
-
-        <div class="row" id="section-4-wrapper">
-            <div class="offset-lg-1 col-lg-10" id="section-4">
-                <p>
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Beatae totam voluptatum voluptatibus cupiditate nemo dolorum nobis
-                    ex ipsa recusandae tempora magni, perspiciatis velit accusamus eius aut alias, impedit laudantium rem?
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorem ut consequuntur tempore, et excepturi dolor asperiores
+                    doloremque assumenda rerum qui aliquid non dolores est ratione magni earum voluptas ducimus repellat.
                 </p>
             </div>
         </div>
