--- a/coaches.html
+++ b/coaches.html
@@ -64,52 +64,13 @@
 
         <div class="row" id="section-1-wrapper">
             <div class="offset-lg-1 col-lg-10" id="section-1">
-                <div id="building-front">
-                    <img src="./assets/images/slideshow/building_dark.JPG" alt="" class="src" height=500>
-                </div>
                 <p>
-                    Knockout Fitness provides kickboxing, Muay Thai, MMA and personal training for adults and children, as well as nutritional
-                    counseling and supplements. Students burn calories and get in shape as they sweat through kickboxing
-                    and Muay Thai classes led by experienced instructors.
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Atque libero reprehenderit quasi animi corporis illo maiores fuga,
+                    vitae eius neque tempora harum praesentium tenetur laborum beatae veniam possimus voluptas nobis!
                 </p>
             </div>
         </div>
 
-        <div class="row" id="section-2-wrapper">
-            <div class="offset-lg-1 col-lg-10" id="section-2">
-                <div id="muay-thai">
-                    <img src="./assets/images/slideshow/9165834.png" alt="" class="src" height=300>
-                </div>
-                <h3>Muay Thai</h3>
-                <p>
-                    Fast-Paced And Difficult To Master, Muay Thai Is One Of Thailand's Proudest Traditions. Read On For A Basic Overview Of This
-                    Centuries-Old Martial Art.
-                </p>
-            </div>
-        </div>
-
-        <div class="row" id="section-3-wrapper">
-            <div class="offset-lg-1 col-lg-10" id="section-3">
-                <div id="knee-2-the-face">
-                    <img src="./assets/images/slideshow/IMG_2525.JPG" alt="" class="src" height=300>
-                </div>
-                <h3>Grappling</h3>
-                <p>
-                    In hand-to-hand combat, grappling is a close fighting technique used to gain a physical advantage such as improving relative
-                    position, or causing injury to the opponent. Grappling covers techniques used in many disciplines, styles
-                    and martial arts that are practiced both as combat sports and for self-defense.
-                </p>
-            </div>
-        </div>
-
-        <div class="row" id="section-4-wrapper">
-            <div class="offset-lg-1 col-lg-10" id="section-4">
-                <p>
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Beatae totam voluptatum voluptatibus cupiditate nemo dolorum nobis
-                    ex ipsa recusandae tempora magni, perspiciatis velit accusamus eius aut alias, impedit laudantium rem?
-                </p>
-            </div>
-        </div>
 
         <div class="row" id="footer-wrapper">
             <div class="offset-lg-1 col-lg-10" id="footer">
