--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                         <a href="location.html">Location</a>
                     </li>
                     <li>
-                        <a href="#">Photo Gallery</a>
+                        <a href="photos.html">Photo Gallery</a>
                     </li>
 
                 </ul>
