--- a/location.html
+++ b/location.html
@@ -45,7 +45,7 @@
                         <a href="location.html">Location</a>
                     </li>
                     <li>
-                        <a href="#">Photo Gallery</a>
+                        <a href="photos.html">Photo Gallery</a>
                     </li>
 
                 </ul>
@@ -54,62 +54,21 @@
         </div>
 
         <div class="row" id="hero-wrapper">
-            <div class="offset-lg-1 col-lg-10" id="hero-banner">
-                <div id="quote">
-                    <h2>Rise above your past to begin your future.</h2>
-                </div>
+            <div class="offset-lg-1 col-lg-10 iframe-map" id="google-map-embed">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3052.965077000866!2d-74.10657868465198!3d40.07619108420366!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c1846b317dbcbf%3A0xd95ca35996ef4455!2s2096+NJ-88%2C+Brick%2C+NJ+08724!5e0!3m2!1sen!2sus!4v1521141140821"
+                    frameborder="0" style="border:0" allowfullscreen></iframe>
             </div>
 
         </div>
 
         <div class="row" id="section-1-wrapper">
             <div class="offset-lg-1 col-lg-10" id="section-1">
-                <div id="building-front">
-                    <img src="./assets/images/slideshow/building_dark.JPG" alt="" class="src" height=500>
-                </div>
-                <p>
-                    Knockout Fitness provides kickboxing, Muay Thai, MMA and personal training for adults and children, as well as nutritional
-                    counseling and supplements. Students burn calories and get in shape as they sweat through kickboxing
-                    and Muay Thai classes led by experienced instructors.
-                </p>
+                <h2>
+                    2096 NJ-88 Brick NJ 08724
+                </h2>
             </div>
         </div>
 
-        <div class="row" id="section-2-wrapper">
-            <div class="offset-lg-1 col-lg-10" id="section-2">
-                <div id="muay-thai">
-                    <img src="./assets/images/slideshow/9165834.png" alt="" class="src" height=300>
-                </div>
-                <h3>Muay Thai</h3>
-                <p>
-                    Fast-Paced And Difficult To Master, Muay Thai Is One Of Thailand's Proudest Traditions. Read On For A Basic Overview Of This
-                    Centuries-Old Martial Art.
-                </p>
-            </div>
-        </div>
-
-        <div class="row" id="section-3-wrapper">
-            <div class="offset-lg-1 col-lg-10" id="section-3">
-                <div id="knee-2-the-face">
-                    <img src="./assets/images/slideshow/IMG_2525.JPG" alt="" class="src" height=300>
-                </div>
-                <h3>Grappling</h3>
-                <p>
-                    In hand-to-hand combat, grappling is a close fighting technique used to gain a physical advantage such as improving relative
-                    position, or causing injury to the opponent. Grappling covers techniques used in many disciplines, styles
-                    and martial arts that are practiced both as combat sports and for self-defense.
-                </p>
-            </div>
-        </div>
-
-        <div class="row" id="section-4-wrapper">
-            <div class="offset-lg-1 col-lg-10" id="section-4">
-                <p>
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Beatae totam voluptatum voluptatibus cupiditate nemo dolorum nobis
-                    ex ipsa recusandae tempora magni, perspiciatis velit accusamus eius aut alias, impedit laudantium rem?
-                </p>
-            </div>
-        </div>
 
         <div class="row" id="footer-wrapper">
             <div class="offset-lg-1 col-lg-10" id="footer">
