--- a/coaches.html
+++ b/coaches.html
@@ -53,11 +53,8 @@
             </div>
         </div>
 
-        <div class="row" id="hero-wrapper">
-            <div class="offset-lg-1 col-lg-10" id="hero-banner">
-                <div id="quote">
-                    <h2>Rise above your past to begin your future.</h2>
-                </div>
+        <div class="row" id="main-wrapper">
+            <div class="offset-lg-1 col-lg-10" id="coaches-banner">
             </div>
 
         </div>
