--- a/location.html
+++ b/location.html
@@ -53,7 +53,7 @@
             </div>
         </div>
 
-        <div class="row" id="hero-wrapper">
+        <div class="row" id="main-wrapper">
             <div class="offset-lg-1 col-lg-10 iframe-map" id="google-map-embed">
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3052.965077000866!2d-74.10657868465198!3d40.07619108420366!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c1846b317dbcbf%3A0xd95ca35996ef4455!2s2096+NJ-88%2C+Brick%2C+NJ+08724!5e0!3m2!1sen!2sus!4v1521141140821"
                     frameborder="0" style="border:0" allowfullscreen></iframe>
