changed some pics

--- a/photos.html
+++ b/photos.html
@@ -53,8 +53,8 @@
             </div>
         </div>
 
-        <div class="row" id="main-wrapper">
-            <div class="offset-lg-1 col-lg-10" id="photos-banner">
+        <div class="row" id="photos-wrapper">
+            <div class="offset-lg-1 col-lg-10" id="photos-area">
 
             </div>
 
