--- a/index.html
+++ b/index.html
@@ -63,10 +63,11 @@
         </div>
 
         <div class="row" id="section-1-wrapper">
-            <div class="offset-lg-1 col-lg-10" id="section-1">
+            <div class="offset-lg-1 col-lg-10 section" id="section-1">
                 <div id="building-front">
                     <img src="./assets/images/slideshow/building_dark.JPG" alt="" class="src" height=500>
                 </div>
+                <h3 class="section-title">Welcome</h3>
                 <p>
                     Knockout Fitness provides kickboxing, Muay Thai, MMA and personal training for adults and children, as well as nutritional
                     counseling and supplements. Students burn calories and get in shape as they sweat through kickboxing
@@ -76,11 +77,11 @@
         </div>
 
         <div class="row" id="section-2-wrapper">
-            <div class="offset-lg-1 col-lg-10" id="section-2">
+            <div class="offset-lg-1 col-lg-10 section" id="section-2">
                 <div id="muay-thai">
                     <img src="./assets/images/slideshow/9165834.png" alt="" class="src" height=300>
                 </div>
-                <h3>Muay Thai</h3>
+                <h3 class="section-title">Muay Thai</h3>
                 <p>
                     Fast-Paced And Difficult To Master, Muay Thai Is One Of Thailand's Proudest Traditions. Read On For A Basic Overview Of This
                     Centuries-Old Martial Art.
@@ -89,11 +90,11 @@
         </div>
 
         <div class="row" id="section-3-wrapper">
-            <div class="offset-lg-1 col-lg-10" id="section-3">
-                <div id="knee-2-the-face">
-                    <img src="./assets/images/slideshow/IMG_2525.JPG" alt="" class="src" height=300>
+            <div class="offset-lg-1 col-lg-10 section" id="section-3">
+                <div id="grappling-photo">
+                    <img src="./assets/images/IMG_2513.JPG" alt="" class="src" height=300>
                 </div>
-                <h3>Grappling</h3>
+                <h3 class="section-title">Grappling</h3>
                 <p>
                     In hand-to-hand combat, grappling is a close fighting technique used to gain a physical advantage such as improving relative
                     position, or causing injury to the opponent. Grappling covers techniques used in many disciplines, styles
@@ -103,10 +104,27 @@
         </div>
 
         <div class="row" id="section-4-wrapper">
-            <div class="offset-lg-1 col-lg-10" id="section-4">
+            <div class="offset-lg-1 col-lg-10 section" id="section-4">
+                <div id="sparring-photo">
+                    <img src="./assets/images/IMG_2526.JPG" alt="" class="src" height=300>
+                </div>
+                <h3 class="section-title">Sparring</h3>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Beatae totam voluptatum voluptatibus cupiditate nemo dolorum nobis
-                    ex ipsa recusandae tempora magni, perspiciatis velit accusamus eius aut alias, impedit laudantium rem?
+                    Sparring is a form of training common to many combat sports. Although the precise form varies, it is essentially relatively
+                    'free-form' fighting, with enough rules, customs, or agreements to make injuries unlikely.
+                </p>
+            </div>
+        </div>
+
+        <div class="row" id="section-5-wrapper">
+            <div class="offset-lg-1 col-lg-10 section" id="section-5">
+                <div id="children-photo">
+                    <img src="./assets/images/IMG_2485.JPG" alt="" class="src" height=300>
+                </div>
+                <h3 class="section-title">Children's Classes</h3>
+                <p>
+                    Sparring is a form of training common to many combat sports. Although the precise form varies, it is essentially relatively
+                    'free-form' fighting, with enough rules, customs, or agreements to make injuries unlikely.
                 </p>
             </div>
         </div>
