--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </div>
 
         <div class="row" id="hero-wrapper">
-            <div class="offset-lg-1 col-lg-10" id="hero-banner">
+            <div class="col-lg-12" id="hero-banner">
                 <div id="quote">
                     <h2>Rise above your past to begin your future.</h2>
                 </div>
@@ -62,7 +62,7 @@
         <div class="row" id="section-1-wrapper">
             <div class="offset-lg-1 col-lg-10 section" id="section-1">
                 <div id="building-front">
-                    <img src="./assets/images/slideshow/building_dark.JPG" alt="" class="src" height=500>
+                    <img src="./assets/images/building_dark.JPG" alt="" class="src" height=400>
                 </div>
                 <h3 class="section-title">Welcome</h3>
                 <p>
