added the photos page for now

--- a/photos.html
+++ b/photos.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+    <script type="text/javascript" src="./assets/js/kf.js"></script>
 
     <div class="wrapper-page">
 
@@ -51,7 +52,24 @@
         </div>
 
 
-        <div class="section section-img-l" id="">
+        <div class="section" id="photos-section">
+            <div id="facebookPhotoGallery">
+
+        <div class='embedsocial-album' data-ref="b5929abbbde6ba428be86fdf27e5c6da115792a9"></div>
+        <script>
+            (function (d, s, id) {
+                var js;
+                if (d.getElementById(id)) {
+                    return;
+                }
+                js = d.createElement(s);
+                js.id = id;
+                js.src = "https://embedsocial.com/embedscript/ei.js";
+                d.getElementsByTagName("head")[0].appendChild(js);
+            }(document, "script", "EmbedSocialScript"));
+        </script>
+                
+            </div>
         </div>
 
 
@@ -63,6 +81,6 @@
     </div>
 
 </body>
-<script type="text/javascript" src="./assets/js/kf.js"></script>
+
 
 </html>
