--- a/index.html
+++ b/index.html
@@ -130,6 +130,8 @@
     </div>
 
 </body>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script type="text/javascript" src="./assets/js/kf.js"></script>
+
 
 </html>
