--- a/coaches.html
+++ b/coaches.html
@@ -19,7 +19,7 @@
         <div class="header-section">
             <div class="social-1">
                 <i class="fas fa-envelope fa-2x"></i>
-                <i class="fab fa-facebook-square fa-2x"></i>
+                <a href="https://www.facebook.com/KnockOutFitnessNj/" target="_blank"><i class="fab fa-facebook-square fa-2x"></i></a>
             </div>
             <div class="logo">
                 <img src="./assets/images/9596014.png" alt="" class="src">
@@ -50,11 +50,29 @@
             </ul>
         </div>
 
-
-        <div class="section section-img-l" id="">
+        <div class="section section-img-l" id="coach-jim">
+            <div class="coach-image">
+                <img src="./assets/images/IMG_2936.jpg" alt="Welcome" class="src">
+            </div>
+            <div class="coach-description">
+                <h3 class="" id="">Jim Walters</h3>
+                <p>
+                    Jim Walters started his martial arts journey in 1988.  Jim currently holds two black belts in Muay Thai and Korean Combat Karate.  Since 2013 he has been studying Brazilian Jujitsu with Steven Anshelewitz.
+                </p>
+            </div>
         </div>
 
-
+        <div class="section section-img-l" id="coach-linda">
+                <div class="coach-image">
+                    <img src="./assets/images/414587_316982055041512_1009225989_o.jpg" alt="Welcome" class="src">
+                </div>
+                <div class="coach-description">
+                    <h3 class="" id="">Linda Walters</h3>
+                    <p>
+                        Linda Walters holds a 3rd degree black belt in Muay Thai.  Linda has also been personal training since 1993 with a NASM personal training certification.  
+                    </p>
+                </div>
+            </div>
 
         <div class="footer-section">
             <h5>&copy; 2018 Knockout Fitness</h5>
