minor changes to size... seeing what looks best

--- a/photos.html
+++ b/photos.html
@@ -52,7 +52,7 @@
         </div>
 
 
-        <div class="section" id="photos-section">
+        <div id="photos-section">
             <div id="facebookPhotoGallery">
 
         <div class='embedsocial-album' data-ref="b5929abbbde6ba428be86fdf27e5c6da115792a9"></div>
