some links added but not much else

--- a/index.html
+++ b/index.html
@@ -18,15 +18,20 @@
 
         <div class="header-section">
             <div class="social-1">
-                <i class="fas fa-envelope fa-2x"></i>
-                <i class="fab fa-facebook-square fa-2x"></i>
+                <a href="mailto:combatkickboxing2727@icloud.com">
+                    <i class="fas fa-envelope fa-2x"></i>
+                </a>
+                <a href="https://www.facebook.com/KnockOutFitnessNj/" target="_blank">
+                    <i class="fab fa-facebook-square fa-2x"></i>
+                </a>
             </div>
             <div class="logo">
                 <img src="./assets/images/9596014.png" alt="" class="src">
             </div>
             <div class="social-2">
-                <i class="fab fa-twitter-square fa-2x"></i>
-                <i class="fab fa-instagram fa-2x"></i>
+                <a href="https://www.instagram.com/explore/locations/286685818/knock-out-fitness-muay-thai/" target="_blank">
+                    <i class="fab fa-instagram fa-2x"></i>
+                </a>
             </div>
         </div>
 
