--- a/photos.html
+++ b/photos.html
@@ -19,15 +19,20 @@
 
         <div class="header-section">
             <div class="social-1">
-                <i class="fas fa-envelope fa-2x"></i>
-                <i class="fab fa-facebook-square fa-2x"></i>
+                <a href="mailto:combatkickboxing2727@icloud.com">
+                    <i class="fas fa-envelope fa-2x"></i>
+                </a>
+                <a href="https://www.facebook.com/KnockOutFitnessNj/" target="_blank">
+                    <i class="fab fa-facebook-square fa-2x"></i>
+                </a>
             </div>
             <div class="logo">
                 <img src="./assets/images/9596014.png" alt="" class="src">
             </div>
             <div class="social-2">
-                <i class="fab fa-twitter-square fa-2x"></i>
-                <i class="fab fa-instagram fa-2x"></i>
+                <a href="https://www.instagram.com/explore/locations/286685818/knock-out-fitness-muay-thai/" target="_blank">
+                    <i class="fab fa-instagram fa-2x"></i>
+                </a>
             </div>
         </div>
 
@@ -55,20 +60,20 @@
         <div id="photos-section">
             <div id="facebookPhotoGallery">
 
-        <div class='embedsocial-album' data-ref="b5929abbbde6ba428be86fdf27e5c6da115792a9"></div>
-        <script>
-            (function (d, s, id) {
-                var js;
-                if (d.getElementById(id)) {
-                    return;
-                }
-                js = d.createElement(s);
-                js.id = id;
-                js.src = "https://embedsocial.com/embedscript/ei.js";
-                d.getElementsByTagName("head")[0].appendChild(js);
-            }(document, "script", "EmbedSocialScript"));
-        </script>
-                
+                <div class='embedsocial-album' data-ref="b5929abbbde6ba428be86fdf27e5c6da115792a9"></div>
+                <script>
+                    (function (d, s, id) {
+                        var js;
+                        if (d.getElementById(id)) {
+                            return;
+                        }
+                        js = d.createElement(s);
+                        js.id = id;
+                        js.src = "https://embedsocial.com/embedscript/ei.js";
+                        d.getElementsByTagName("head")[0].appendChild(js);
+                    }(document, "script", "EmbedSocialScript"));
+                </script>
+
             </div>
         </div>
 
