few minor changes for readability

--- a/location.html
+++ b/location.html
@@ -18,9 +18,6 @@
 
         <div class="header-section">
             <div class="social-1">
-                <a href="mailto:combatkickboxing2727@icloud.com">
-                    <i class="fas fa-envelope fa-2x"></i>
-                </a>
                 <a href="https://www.facebook.com/KnockOutFitnessNj/" target="_blank">
                     <i class="fab fa-facebook-square fa-2x"></i>
                 </a>
@@ -69,6 +66,7 @@
     </div>
 
 </body>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script type="text/javascript" src="./assets/js/kf.js"></script>
 
 </html>
