--- a/photos.html
+++ b/photos.html
@@ -19,9 +19,6 @@
 
         <div class="header-section">
             <div class="social-1">
-                <a href="mailto:combatkickboxing2727@icloud.com">
-                    <i class="fas fa-envelope fa-2x"></i>
-                </a>
                 <a href="https://www.facebook.com/KnockOutFitnessNj/" target="_blank">
                     <i class="fab fa-facebook-square fa-2x"></i>
                 </a>
@@ -86,6 +83,8 @@
     </div>
 
 </body>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script type="text/javascript" src="./assets/js/kf.js"></script>
 
 
 </html>
