made some changes to the layout and changeed the pics

--- a/index.html
+++ b/index.html
@@ -72,50 +72,8 @@
             </div>
         </div>
 
-        <div class="section section-img-r" id="muay-thai">
-            <div class="home-content">
-                <h3 class="section-title">Muay Thai</h3>
-                <p>
-                    Fast-Paced And Difficult To Master, Muay Thai Is One Of Thailand's Proudest Traditions. Read On For A Basic Overview Of This
-                    Centuries-Old Martial Art.
-                </p>
-            </div>
-            <div class="home-image">
-                <img src="./assets/images/9165834.png" alt="Muay Thai" class="src">
-            </div>
-        </div>
+        <div class="section section-img-r" id="children">
 
-        <div class="section section-img-l" id="grappling">
-            <div class="home-image">
-                <img src="./assets/images/IMG_2513.JPG" alt="Grappling" class="src">
-            </div>
-            <div class="home-content">
-                <h3 class="section-title">Grappling</h3>
-                <p>
-                    In hand-to-hand combat, grappling is a close fighting technique used to gain a physical advantage such as improving relative
-                    position, or causing injury to the opponent. Grappling covers techniques used in many disciplines, styles
-                    and martial arts that are practiced both as combat sports and for self-defense.
-                </p>
-            </div>
-        </div>
-
-        <div class="section section-img-r" id="sparring">
-            <div class="home-content">
-                <h3 class="section-title">Sparring</h3>
-                <p>
-                    Sparring is a form of training common to many combat sports. Although the precise form varies, it is essentially relatively
-                    'free-form' fighting, with enough rules, customs, or agreements to make injuries unlikely.
-                </p>
-            </div>
-            <div class="home-image">
-                <img src="./assets/images/IMG_2526.JPG" alt="Sparring" class="src">
-            </div>
-        </div>
-
-        <div class="section section-img-l" id="children">
-            <div class="home-image">
-                <img src="./assets/images/IMG_2485.JPG" alt="Children's Class" class="src">
-            </div>
             <div class="home-content">
                 <h3 class="section-title">Children's Classes</h3>
                 <p id="test">
@@ -123,17 +81,69 @@
                     'free-form' fighting, with enough rules, customs, or agreements to make injuries unlikely.
                 </p>
             </div>
+            <div class="home-image">
+                <img src="./assets/images/childrens-1.jpeg" alt="Children's Class" class="src">
+            </div>
+        </div>
+
+        <div class="section section-img-l" id="fitness">
+            <div class="home-image">
+                <img src="./assets/images/28959287_1960160284057006_111231453873831936_n.jpg" alt="Fitness Classes" class="src">
+            </div>
+            <div class="home-content">
+                <h3 class="section-title">Fitness Classes</h3>
+                <p id="test">
+                    Physical fitness is a state of health and well-being and, more specifically, the ability to perform aspects of sports, occupations
+                    and daily activities. Physical fitness is generally achieved through proper nutrition, moderate-vigorous
+                    physical exercise, and sufficient rest.
+                </p>
+            </div>
+        </div>
+
+        <div class="section section-img-r" id="muay-thai">
+            <div class="home-content">
+                <h3 class="section-title">Muay Thai</h3>
+                <p>
+                    Fast-Paced And Difficult To Master, Muay Thai Is One Of Thailand's Proudest Traditions. It is referred to as the "Art of
+                    Eight Limbs" or the "Science of Eight Limbs", because it makes use of punches, kicks, elbows and knee
+                    strikes, thus using eight "points of contact", as opposed to "two points" (fists) in boxing and "four
+                    points" (hands and feet) used in other more regulated combat sports, such as kickboxing and savate.[5]
+                    A practitioner of muay Thai is known as a nak muay. Western practitioners are sometimes called Nak Muay
+                    Farang, meaning "foreign boxer."
+                </p>
+            </div>
+            <div class="home-image">
+                <img src="./assets/images/74954_10151437781703273_873788458_n.jpg" alt="Muay Thai" class="src">
+            </div>
+        </div>
+
+        <div class="section section-img-r" id="sparring">
+            <div class="home-content">
+                <h3 class="section-title">Sparring & Grappling</h3>
+                <p>
+                    Sparring is a form of training common to many combat sports. Although the precise form varies, it is essentially relatively
+                    'free-form' fighting, with enough rules, customs, or agreements to make injuries unlikely.
+                </p>
+                <p>
+                    In hand-to-hand combat, grappling is a close fighting technique used to gain a physical advantage such as improving relative
+                    position, or causing injury to the opponent. Grappling covers techniques used in many disciplines, styles
+                    and martial arts that are practiced both as combat sports and for self-defense.
+                </p>
+            </div>
+            <div class="home-image">
+                <img src="./assets/images/IMG_2526.JPG" alt="Sparring" class="src">
+            </div>
         </div>
 
         <div class="footer-section">
-            <h5>&copy; 2018 Knockout Fitness</h5>
         </div>
 
     </div>
 
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script type="text/javascript" src="./assets/js/kf.js"></script>
 </body>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script type="text/javascript" src="./assets/js/kf.js"></script>
 
 
 </html>
