changing some of the text around

--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
                 <h3 class="section-title" id="welcome-header">Welcome</h3>
                 <p>
                     Knockout Fitness provides kickboxing, Muay Thai, MMA and personal training for adults and children, as well as nutritional
-                    counseling and supplements. Students burn calories and get in shape as they sweat through kickboxing
-                    and Muay Thai classes led by experienced instructors.
+                    counseling and supplements in a positive environment. Students burn calories and get in shape as they sweat through kickboxing
+                    and Muay Thai classes led by experienced instructors who are always here to help you.
                 </p>
             </div>
         </div>
@@ -76,9 +76,10 @@
 
             <div class="home-content">
                 <h3 class="section-title">Children's Classes</h3>
-                <p id="test">
-                    Sparring is a form of training common to many combat sports. Although the precise form varies, it is essentially relatively
-                    'free-form' fighting, with enough rules, customs, or agreements to make injuries unlikely.
+                <p id="">Children who get involved in martial arts reap many benefits in several areas of life such as: fitness, self-defense,
+                    self discipline, respect and self-confidence. We teach our students how to train their mind, body and
+                    spirit to act as one in harmony. We strive to bring out the best in your children to help them success
+                    as well as teach them effective self-defense techniques.
                 </p>
             </div>
             <div class="home-image">
@@ -95,7 +96,7 @@
                 <p id="test">
                     Physical fitness is a state of health and well-being and, more specifically, the ability to perform aspects of sports, occupations
                     and daily activities. Physical fitness is generally achieved through proper nutrition, moderate-vigorous
-                    physical exercise, and sufficient rest.
+                    physical exercise, and sufficient rest. Suitable for everyone of all ages, come in and start training with us and become part of something positive. 
                 </p>
             </div>
         </div>
@@ -103,14 +104,12 @@
         <div class="section section-img-r" id="muay-thai">
             <div class="home-content">
                 <h3 class="section-title">Muay Thai</h3>
-                <p>
-                    Fast-Paced And Difficult To Master, Muay Thai Is One Of Thailand's Proudest Traditions. It is referred to as the "Art of
-                    Eight Limbs" or the "Science of Eight Limbs", because it makes use of punches, kicks, elbows and knee
-                    strikes, thus using eight "points of contact", as opposed to "two points" (fists) in boxing and "four
-                    points" (hands and feet) used in other more regulated combat sports, such as kickboxing and savate.[5]
-                    A practitioner of muay Thai is known as a nak muay. Western practitioners are sometimes called Nak Muay
-                    Farang, meaning "foreign boxer."
-                </p>
+                <p>Muay Thai is a combat sport originating in Thailand that uses stand-up striking along with various clinching
+                    techniques. This physical and mental discipline, also known as "the art of eight limbs", utilizes one's
+                    fists, elbows, knees, and shins.</p>
+                <p>Like most competitive sports, Muay Thai has a heavy focus on body conditioning where training regimens include
+                    running, shadowboxing, rope jumping, body weight resistance exercises, medicine ball exercises, abdominal
+                    exercises, and weight training.</p>
             </div>
             <div class="home-image">
                 <img src="./assets/images/74954_10151437781703273_873788458_n.jpg" alt="Muay Thai" class="src">
