added a border for the hero

--- a/coaches.html
+++ b/coaches.html
@@ -59,8 +59,8 @@
             <div class="coach-description" id="jim-section">
                 <h3 class="" id="jim-header">Jim Walters</h3>
                 <p>
-                    Jim Walters started his martial arts journey in 1988. Jim currently holds two black belts in Muay Thai and Korean Combat
-                    Karate. Since 2013 he has been studying Brazilian Jujitsu with Steven Anshelewitz.
+                    Jim Walters started his martial arts journey in 1988. Jim currently holds two black belts in Muay Thai Kickboxing and Korean Combat
+                    Karate. Since 2013 he has been studying Brazilian Jujitsu with Steven Anshelewitz and currently holds a purple belt.
                 </p>
             </div>
         </div>
