--- a/index.html
+++ b/index.html
@@ -58,6 +58,9 @@
             </div>
         </div>
 
+        <div class="separator">
+        </div>
+
         <div class="section section-img-l" id="welcome">
             <div class="home-image">
                 <img src="./assets/images/building_dark.JPG" alt="Welcome" class="src">
@@ -66,8 +69,9 @@
                 <h3 class="section-title" id="welcome-header">Welcome</h3>
                 <p>
                     Knockout Fitness provides kickboxing, Muay Thai, MMA and personal training for adults and children, as well as nutritional
-                    counseling and supplements in a positive environment. Students burn calories and get in shape as they sweat through kickboxing
-                    and Muay Thai classes led by experienced instructors who are always here to help you.
+                    counseling and supplements in a positive environment. Students burn calories and get in shape as they
+                    sweat through kickboxing and Muay Thai classes led by experienced instructors who are always here to
+                    help you. We are currently ranked as the #1 Muay Thai gym in Brick and #3 in the Tri-State.
                 </p>
             </div>
         </div>
@@ -96,7 +100,9 @@
                 <p id="test">
                     Physical fitness is a state of health and well-being and, more specifically, the ability to perform aspects of sports, occupations
                     and daily activities. Physical fitness is generally achieved through proper nutrition, moderate-vigorous
-                    physical exercise, and sufficient rest. Suitable for everyone of all ages, come in and start training with us and become part of something positive. 
+                    physical exercise, and sufficient rest. Suitable for everyone of all ages, our training regimens include
+                    running, shadowboxing, rope jumping, body weight resistance exercises, medicine ball exercises, abdominal
+                    exercises, and weight training.
                 </p>
             </div>
         </div>
@@ -106,13 +112,25 @@
                 <h3 class="section-title">Muay Thai</h3>
                 <p>Muay Thai is a combat sport originating in Thailand that uses stand-up striking along with various clinching
                     techniques. This physical and mental discipline, also known as "the art of eight limbs", utilizes one's
-                    fists, elbows, knees, and shins.</p>
-                <p>Like most competitive sports, Muay Thai has a heavy focus on body conditioning where training regimens include
-                    running, shadowboxing, rope jumping, body weight resistance exercises, medicine ball exercises, abdominal
-                    exercises, and weight training.</p>
+                    fists, elbows, knees, and shins. Like most competitive sports, Muay Thai has a heavy focus on body conditioning
+                    where </p>
             </div>
             <div class="home-image">
                 <img src="./assets/images/74954_10151437781703273_873788458_n.jpg" alt="Muay Thai" class="src">
+            </div>
+        </div>
+
+        <div class="section section-img-l" id="grappling">
+            <div class="home-image">
+                <img src="./assets/images/28959287_1960160284057006_111231453873831936_n.jpg" alt="Grappling" class="src">
+            </div>
+            <div class="home-content">
+                <h3 class="section-title">Grappling</h3>
+                <p>
+                    In hand-to-hand combat, grappling is a close fighting technique used to gain a physical advantage such as improving relative
+                    position, or causing injury to the opponent. Grappling covers techniques used in many disciplines, styles
+                    and martial arts that are practiced both as combat sports and for self-defense.
+                </p>
             </div>
         </div>
 
@@ -120,13 +138,7 @@
             <div class="home-content">
                 <h3 class="section-title">Sparring & Grappling</h3>
                 <p>
-                    Sparring is a form of training common to many combat sports. Although the precise form varies, it is essentially relatively
-                    'free-form' fighting, with enough rules, customs, or agreements to make injuries unlikely.
-                </p>
-                <p>
-                    In hand-to-hand combat, grappling is a close fighting technique used to gain a physical advantage such as improving relative
-                    position, or causing injury to the opponent. Grappling covers techniques used in many disciplines, styles
-                    and martial arts that are practiced both as combat sports and for self-defense.
+                    Sparring is a form of training common to many combat sports. Our advanced classes offer both
                 </p>
             </div>
             <div class="home-image">
