changed things visually

--- a/coaches.html
+++ b/coaches.html
@@ -67,7 +67,7 @@
 
         <div class="section section-img-l" id="coach-linda">
             <div class="coach-image">
-                <img src="./assets/images/414587_316982055041512_1009225989_o.jpg" alt="Welcome" class="src">
+                <img src="./assets/images/linda.jpg" alt="Welcome" class="src">
             </div>
             <div class="coach-description">
                 <h3 class="" id="">Linda Walters</h3>
