--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 </p>
             </div>
             <div class="home-image">
-                <img src="./assets/images/childrens-1.jpeg" alt="Children's Class" class="src">
+                <img src="./assets/images/children.jpg" alt="Children's Class" class="src">
             </div>
         </div>
 
@@ -116,7 +116,7 @@
                     where </p>
             </div>
             <div class="home-image">
-                <img src="./assets/images/74954_10151437781703273_873788458_n.jpg" alt="Muay Thai" class="src">
+                <img src="./assets/images/prajioud.jpg" alt="Muay Thai" class="src">
             </div>
         </div>
 
