--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 
         <div class="section section-img-r" id="sparring">
             <div class="home-content">
-                <h3 class="section-title">Sparring & Grappling</h3>
+                <h3 class="section-title">Sparring</h3>
                 <p>
                     Sparring is a form of training common to many combat sports. Our advanced classes offer both
                 </p>
