--- a/index.html
+++ b/index.html
@@ -147,6 +147,18 @@
         </div>
 
         <div class="footer-section">
+            <div>
+                <img src="./assets/images/9596014.png" alt="" class="src">
+            </div>
+            <div>
+                <ul>
+                    <li>Phone: </li>
+                    <li>Address: </li>
+                    <li>Facebook: </li>
+                    <li>Instagram: </li>
+                    <li>Email: </li>
+                </ul>
+            </div>
         </div>
 
     </div>
