added some content

--- a/index.html
+++ b/index.html
@@ -127,9 +127,9 @@
             <div class="home-content">
                 <h3 class="section-title">Grappling</h3>
                 <p>
-                    In hand-to-hand combat, grappling is a close fighting technique used to gain a physical advantage such as improving relative
-                    position, or causing injury to the opponent. Grappling covers techniques used in many disciplines, styles
-                    and martial arts that are practiced both as combat sports and for self-defense.
+                    Grappling is a close fighting technique used to gain a physical advantage by improving relative position. Grappling covers
+                    techniques used in many disciplines, styles and martial arts that are practiced both as combat sports
+                    and for self-defense.
                 </p>
             </div>
         </div>
@@ -138,7 +138,9 @@
             <div class="home-content">
                 <h3 class="section-title">Sparring</h3>
                 <p>
-                    Sparring is a form of training common to many combat sports. Our advanced classes offer both
+                    Sparring sharpens and develops techniques while completely conditioning your body for sport combat
+                    as well as self defense. More importantly it can teach you the importance of timing
+                    and judgment of distance in relation to your offensive and defensive techniques.
                 </p>
             </div>
             <div class="home-image">
