fixed a little issue with margins

--- a/index.html
+++ b/index.html
@@ -168,7 +168,9 @@
                             <i class="fab fa-instagram fa-2x"></i>
                         </a>
                     </li>
-                    <li><a href="mailto:combatkickboxing27@yahoo.com">Email: combatkickboxing27@yahoo.com</a></li>
+                    <li>
+                        <a href="mailto:combatkickboxing27@yahoo.com">Email: combatkickboxing27@yahoo.com</a>
+                    </li>
                 </ul>
             </div>
         </div>
