--- a/coaches.html
+++ b/coaches.html
@@ -59,8 +59,9 @@
             <div class="coach-description" id="jim-section">
                 <h3 class="" id="jim-header">Jim Walters</h3>
                 <p>
-                    Jim Walters started his martial arts journey in 1988. Jim currently holds two black belts in Muay Thai Kickboxing and Korean Combat
-                    Karate. Since 2013 he has been studying Brazilian Jujitsu with Steven Anshelewitz and currently holds a purple belt.
+                    Jim Walters started his martial arts journey in 1988. Jim currently holds two black belts in Muay Thai Kickboxing and Korean
+                    Combat Karate. Since 2013 he has been studying Brazilian Jujitsu with Steven Anshelewitz and currently
+                    holds a purple belt.
                 </p>
             </div>
         </div>
@@ -79,7 +80,30 @@
         </div>
 
         <div class="footer-section">
-            <h5>&copy; 2018 Knockout Fitness</h5>
+            <div class="footer-logo">
+                <img src="./assets/images/9596014.png" alt="" class="src">
+            </div>
+            <div class="footer-info">
+                <h4>Phone Numbers:</h4>
+                <ul>
+                    <li>Jim Walters - 732-598-7167</li>
+                    <li>Linda Walters - 732-841-8886</li>
+                </ul>
+                <ul>
+                    <li>Address: NJ-88, Brick, NJ 08724</li>
+                    <li>
+                        <a href="https://www.facebook.com/KnockOutFitnessNj/" target="_blank">
+                            <i class="fab fa-facebook-square fa-2x"></i>
+                        </a>
+                        <a href="https://www.instagram.com/explore/locations/286685818/knock-out-fitness-muay-thai/" target="_blank">
+                            <i class="fab fa-instagram fa-2x"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="mailto:combatkickboxing27@yahoo.com">Email: combatkickboxing27@yahoo.com</a>
+                    </li>
+                </ul>
+            </div>
         </div>
 
     </div>
