fixed the responsiveness of the coaches section

--- a/coaches.html
+++ b/coaches.html
@@ -66,10 +66,7 @@
             </div>
         </div>
 
-        <div class="section section-img-l" id="coach-linda">
-            <div class="coach-image">
-                <img src="./assets/images/linda.jpg" alt="Welcome" class="src">
-            </div>
+        <div class="section section-img-r" id="coach-linda">
             <div class="coach-description">
                 <h3 class="" id="">Linda Walters</h3>
                 <p>
@@ -77,6 +74,10 @@
                     training certification.
                 </p>
             </div>
+            <div class="coach-image">
+                <img src="./assets/images/linda.jpg" alt="Welcome" class="src">
+            </div>
+
         </div>
 
         <div class="footer-section">
