few minor changes

--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
 
         <div class="header-section">
             <div class="social-1">
-                <a href="https://www.facebook.com/KnockOutFitnessNj/" target="_blank">
+                <a class="icon" href="https://www.facebook.com/KnockOutFitnessNj/" target="_blank">
                     <i class="fab fa-facebook-square fa-2x"></i>
                 </a>
             </div>
             <div class="logo">
                 <img src="./assets/images/9596014.png" alt="" class="src">
             </div>
-            <div class="social-2">
-                <a href="https://www.instagram.com/explore/locations/286685818/knock-out-fitness-muay-thai/" target="_blank">
+            <div class="social-2 ">
+                <a class="icon" href="https://www.instagram.com/explore/locations/286685818/knock-out-fitness-muay-thai/" target="_blank">
                     <i class="fab fa-instagram fa-2x"></i>
                 </a>
             </div>
@@ -148,6 +148,26 @@
             </div>
         </div>
 
+        <div class="nav-section">
+            <ul>
+                <li>
+                    <a href="index.html">Home</a>
+                </li>
+                <li>
+                    <a href="coaches.html">Coaches</a>
+                </li>
+                <li>
+                    <a href="schedule.html">Schedule</a>
+                </li>
+                <li>
+                    <a href="location.html">Location</a>
+                </li>
+                <li>
+                    <a href="photos.html">Photos</a>
+                </li>
+            </ul>
+        </div>
+
         <div class="footer-section">
             <div class="footer-logo">
                 <img src="./assets/images/9596014.png" alt="" class="src">
@@ -160,10 +180,10 @@
                 <ul>
                     <li>Address: NJ-88, Brick, NJ 08724</li>
                     <li>
-                        <a href="https://www.facebook.com/KnockOutFitnessNj/" target="_blank">
+                        <a class="icon" href="https://www.facebook.com/KnockOutFitnessNj/" target="_blank">
                             <i class="fab fa-facebook-square fa-2x"></i>
                         </a>
-                        <a href="https://www.instagram.com/explore/locations/286685818/knock-out-fitness-muay-thai/" target="_blank">
+                        <a class="icon" href="https://www.instagram.com/explore/locations/286685818/knock-out-fitness-muay-thai/" target="_blank">
                             <i class="fab fa-instagram fa-2x"></i>
                         </a>
                     </li>
