--- a/location.html
+++ b/location.html
@@ -18,7 +18,7 @@
 
         <div class="header-section">
             <div class="social-1">
-                <a href="https://www.facebook.com/KnockOutFitnessNj/" target="_blank">
+                <a class="icon" href="https://www.facebook.com/KnockOutFitnessNj/" target="_blank">
                     <i class="fab fa-facebook-square fa-2x"></i>
                 </a>
             </div>
@@ -26,7 +26,7 @@
                 <img src="./assets/images/9596014.png" alt="" class="src">
             </div>
             <div class="social-2">
-                <a href="https://www.instagram.com/explore/locations/286685818/knock-out-fitness-muay-thai/" target="_blank">
+                <a class="icon" href="https://www.instagram.com/explore/locations/286685818/knock-out-fitness-muay-thai/" target="_blank">
                     <i class="fab fa-instagram fa-2x"></i>
                 </a>
             </div>
@@ -56,6 +56,26 @@
         <div class="iframe-map" id="google-map-embed">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3052.965077000866!2d-74.10657868465198!3d40.07619108420366!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c1846b317dbcbf%3A0xd95ca35996ef4455!2s2096+NJ-88%2C+Brick%2C+NJ+08724!5e0!3m2!1sen!2sus!4v1521141140821"
                 frameborder="0" style="border:0" allowfullscreen></iframe>
+        </div>
+
+        <div class="nav-section">
+            <ul>
+                <li>
+                    <a href="index.html">Home</a>
+                </li>
+                <li>
+                    <a href="coaches.html">Coaches</a>
+                </li>
+                <li>
+                    <a href="schedule.html">Schedule</a>
+                </li>
+                <li>
+                    <a href="location.html">Location</a>
+                </li>
+                <li>
+                    <a href="photos.html">Photos</a>
+                </li>
+            </ul>
         </div>
 
 
