--- a/photos.html
+++ b/photos.html
@@ -19,7 +19,7 @@
 
         <div class="header-section">
             <div class="social-1">
-                <a href="https://www.facebook.com/KnockOutFitnessNj/" target="_blank">
+                <a class="icon" href="https://www.facebook.com/KnockOutFitnessNj/" target="_blank">
                     <i class="fab fa-facebook-square fa-2x"></i>
                 </a>
             </div>
@@ -27,7 +27,7 @@
                 <img src="./assets/images/9596014.png" alt="" class="src">
             </div>
             <div class="social-2">
-                <a href="https://www.instagram.com/explore/locations/286685818/knock-out-fitness-muay-thai/" target="_blank">
+                <a class="icon" href="https://www.instagram.com/explore/locations/286685818/knock-out-fitness-muay-thai/" target="_blank">
                     <i class="fab fa-instagram fa-2x"></i>
                 </a>
             </div>
@@ -74,6 +74,25 @@
             </div>
         </div>
 
+        <div class="nav-section">
+            <ul>
+                <li>
+                    <a href="index.html">Home</a>
+                </li>
+                <li>
+                    <a href="coaches.html">Coaches</a>
+                </li>
+                <li>
+                    <a href="schedule.html">Schedule</a>
+                </li>
+                <li>
+                    <a href="location.html">Location</a>
+                </li>
+                <li>
+                    <a href="photos.html">Photos</a>
+                </li>
+            </ul>
+        </div>
 
 
         <div class="footer-section">
