few minor changes

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 <h3 class="section-title">Children's Classes</h3>
                 <p id="">Children who get involved in martial arts reap many benefits in several areas of life such as: fitness, self-defense,
                     self discipline, respect and self-confidence. We teach our students how to train their mind, body and
-                    spirit to act as one in harmony. We strive to bring out the best in your children to help them success
+                    spirit to act as one in harmony. We strive to bring out the best in your children to help them succeed
                     as well as teach them effective self-defense techniques.
                 </p>
             </div>
@@ -113,7 +113,7 @@
                 <p>Muay Thai is a combat sport originating in Thailand that uses stand-up striking along with various clinching
                     techniques. This physical and mental discipline, also known as "the art of eight limbs", utilizes one's
                     fists, elbows, knees, and shins. Like most competitive sports, Muay Thai has a heavy focus on body conditioning
-                    where </p>
+                    to promote the level of fitness and toughness required for ring competition. </p>
             </div>
             <div class="home-image">
                 <img src="./assets/images/prajioud.jpg" alt="Muay Thai" class="src">
@@ -178,7 +178,7 @@
                     <li>Linda Walters - 732-841-8886</li>
                 </ul>
                 <ul>
-                    <li>Address: NJ-88, Brick, NJ 08724</li>
+                    <li>Address: 2096 NJ-88, Brick, NJ 08724</li>
                     <li>
                         <a class="icon" href="https://www.facebook.com/KnockOutFitnessNj/" target="_blank">
                             <i class="fab fa-facebook-square fa-2x"></i>
@@ -188,7 +188,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="mailto:combatkickboxing27@yahoo.com">Email: combatkickboxing27@yahoo.com</a>
+                        <a class="icon" href="mailto:combatkickboxing27@yahoo.com">Email: combatkickboxing27@yahoo.com</a>
                     </li>
                 </ul>
             </div>
