--- a/schedule.html
+++ b/schedule.html
@@ -90,17 +90,17 @@
                     <li>Linda Walters - 732-841-8886</li>
                 </ul>
                 <ul>
-                    <li>Address: NJ-88, Brick, NJ 08724</li>
+                    <li>Address: 2096 NJ-88, Brick, NJ 08724</li>
                     <li>
-                        <a href="https://www.facebook.com/KnockOutFitnessNj/" target="_blank">
+                        <a class="icon" href="https://www.facebook.com/KnockOutFitnessNj/" target="_blank">
                             <i class="fab fa-facebook-square fa-2x"></i>
                         </a>
-                        <a href="https://www.instagram.com/explore/locations/286685818/knock-out-fitness-muay-thai/" target="_blank">
+                        <a class="icon" href="https://www.instagram.com/explore/locations/286685818/knock-out-fitness-muay-thai/" target="_blank">
                             <i class="fab fa-instagram fa-2x"></i>
                         </a>
                     </li>
                     <li>
-                        <a href="mailto:combatkickboxing27@yahoo.com">Email: combatkickboxing27@yahoo.com</a>
+                        <a class="icon" href="mailto:combatkickboxing27@yahoo.com">Email: combatkickboxing27@yahoo.com</a>
                     </li>
                 </ul>
             </div>
