fixing more things

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     Knockout Fitness provides kickboxing, Muay Thai, MMA and personal training for adults and children, as well as nutritional
                     counseling and supplements in a positive environment. Students burn calories and get in shape as they
                     sweat through kickboxing and Muay Thai classes led by experienced instructors who are always here to
-                    help you. We are currently ranked as the #1 Muay Thai gym in Brick and #3 in the Tri-State.
+                    help you.
                 </p>
             </div>
         </div>
