--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
         <div class="hero-section">
             <div id="quote">
-                <h2>Rise above your past to begin your future.</h2>
+                <h2 id="quote-inner">Rise above your past to begin your future.</h2>
             </div>
         </div>
 
